--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     
-    <div class="container mt-4">
-        <div class="w-75 m-auto py-3 px-5  border rounded-2 ">
-            <h1 class="mb-3">CRUD SYSTEM</h1>
+    <div class="container mt-5">
+        <h1 class="my-3 text-center">CRUD SYSTEM</h1>
+        <div class="width m-auto py-3 px-3 px-sm-5  border rounded-2 ">
             <div class="mb-3  ">
                 <label for="productName" class="form-label">Product Name:</label>
                 <input
@@ -62,8 +62,8 @@
         </div>
 
 
-        <div class="w-50 m-auto px-sm-5 ">
-            <input type="text" class="form-control my-4 rounded-5 py-2" placeholder="  Search .." onkeyup="SearchProduct(this.value)" >
+        <div class="search-field m-auto px-sm-5 ">
+            <input type="text" class="form-control my-4 rounded-5 py-2 shadow" placeholder="  Search .." onkeyup="SearchProduct(this.value)" >
         </div>
 
        <div class="px-sm-5 py-3 ">
